// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders correctly 1`] = `
<a
  className="profile-link"
  href="user1"
>
  <div
    className="premium-flag"
  >
    <svg
      className="gb-icon-medium gb-icon-fill-white"
      height="100%"
      id="facebook"
      viewBox="0 0 28 28"
      width="100%"
    >
      <title>
        search2
      </title>
      <path
        d="M13.843,5.323 L15.832,9.807 C16.164,10.558 16.841,11.101 17.646,11.262 L23.302,12.396 L19.423,16.275 C18.827,16.871 18.566,17.726 18.728,18.555 L19.811,24.104 L14.868,21.908 C14.542,21.763 14.193,21.690 13.843,21.690 C13.494,21.690 13.144,21.763 12.818,21.908 L7.872,24.105 L8.956,18.554 C9.117,17.726 8.857,16.872 8.261,16.276 L4.385,12.395 L10.040,11.262 C10.845,11.101 11.521,10.558 11.855,9.807 L13.843,5.323 M13.843,0.650 C13.421,0.650 13.038,0.901 12.865,1.287 L9.544,8.777 L1.210,10.449 C0.825,10.528 0.515,10.811 0.401,11.190 C0.285,11.565 0.389,11.974 0.669,12.257 L6.473,18.068 L4.852,26.388 C4.771,26.794 4.875,27.188 5.189,27.441 C5.376,27.588 5.616,27.670 5.866,27.670 C6.015,27.670 6.163,27.638 6.295,27.577 L13.843,24.224 L21.403,27.583 C21.531,27.644 21.674,27.675 21.827,27.675 C22.068,27.675 22.304,27.594 22.490,27.446 C22.806,27.195 22.911,26.789 22.835,26.390 L21.209,18.068 L27.018,12.257 C27.298,11.978 27.402,11.568 27.287,11.193 C27.173,10.813 26.860,10.528 26.474,10.449 L18.143,8.777 L14.820,1.285 C14.649,0.900 14.265,0.650 13.843,0.650 L13.843,0.650 Z"
        fill="rgb(255, 255, 255)"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <img
    alt="avatar"
    className="gb-avatar premium user-avatar"
    src="image.jpg"
  />
</a>
`;

exports[`PhotographerContent renders correctly 1`] = `
Array [
  <div
    className="flex-container-space"
  >
    <div>
      <span
        className="big-num"
      >
        0
      </span>
      <span
        className="light-blue"
      >
        Jobs 
        <br />
        done
      </span>
    </div>
    <a
      className="gb-btn gb-btn-small gb-btn-primary gb-btn-white"
      href="/dashboard"
      onClick={[Function]}
    >
      See the projects
    </a>
  </div>,
  <div
    className="pink-box"
  >
    <p>
      There, between rolling hills and the Apennine mountains in the Mugello valley.
    </p>
    <div
      onClick={[Function]}
    >
      <div
        className="hire-button"
      >
        <h5>
          Hire me
        </h5>
      </div>
    </div>
  </div>,
  <div
    className="review-box"
  >
    <h2
      className="review-box-title"
    >
      Last review
    </h2>
    <a
      className="profile-link"
      href="#"
    >
      <img
        alt="avatar"
        className="gb-avatar gb-avatar-medium"
        src="https://images.askmen.com/1080x540/2016/01/25-021526-facebook_profile_picture_affects_chances_of_getting_hired.jpg"
      />
    </a>
    <h3
      className="review-author-name"
    >
      John Doe
    </h3>
    <p
      className="review-author-quote"
    >
      “
      New battery for smartphones can be charged in a minute
      ”
    </p>
    <svg
      className="gb-icon-medium"
      height="100%"
      id="notification"
      viewBox="0 0 185 362"
      width="100%"
    >
      <title>
        arrow
      </title>
      <line
        stroke="grey"
        strokeWidth="10px"
        x1="0.346633"
        x2="184.347"
        y1="0.639659"
        y2="177.64"
      />
      <line
        stroke="grey"
        strokeWidth="10px"
        x1="184.353"
        x2="0.352587"
        y1="178.355"
        y2="361.355"
      />
    </svg>
  </div>,
]
`;

exports[`ProfileCard renders corectly 1`] = `
<div
  className="gb-card-10-wrapper"
>
  <div
    className="profile-card"
    style={
      Object {
        "backgroundColor": "#002b41",
      }
    }
  >
    <div
      className="card-10-shadow-overlay"
    />
    <a
      className="profile-link"
      href="#"
    >
      <img
        alt="avatar"
        className="gb-avatar profile-avatar gb-avatar-x-large"
        src="myFakeImage.jpg"
      />
    </a>
  </div>
</div>
`;

exports[`ProfileContent renders corectly 1`] = `
<div
  className="profile-content"
>
  <h1
    className="profile-name"
  >
    S S
  </h1>
  <p>
    <span
      className="profile-desc bold"
    >
      S
    </span>
    <span>
       | 
    </span>
    <span
      className="profile-desc user-type"
    >
      photographer
    </span>
  </p>
  <a
    className="gb-btn gb-btn-small gb-btn-primary gb-btn-white"
    href="/ProfileEdit"
    id="edit-profile-link"
    onClick={[Function]}
  >
    Edit Profile 
    <svg
      className="gb-icon-medium gb-icon-fill-white"
      height="100%"
      id="edit"
      viewBox="0 0 32 32"
      width="100%"
    >
      <title>
        edit
      </title>
      <path
        d="M27 0c2.761 0 5 2.239 5 5 0 1.126-0.372 2.164-1 3l-2 2-7-7 2-2c0.836-0.628 1.874-1 3-1zM2 23l-2 9 9-2 18.5-18.5-7-7-18.5 18.5zM22.362 11.362l-14 14-1.724-1.724 14-14 1.724 1.724z"
      />
    </svg>
  </a>
  <div
    className="black"
  >
    <h3>
      Description
    </h3>
    <p
      className="profile-desc"
    >
      There, between rolling hills and the Apennine mountains in the Mugello valley (home to the famous race track) lies Lake Bilancino. There, between rolling hills and the Apennine mountains in the Mugello valley. There, between rolling hills and the Apennine mountains in the Mugello valley (home to the famous race track) lies Lake Bilancino.
    </p>
  </div>
  <div
    className="flex-container-space"
  >
    <div>
      <span
        className="big-num"
      >
        0
      </span>
      <span
        className="light-blue"
      >
        Jobs 
        <br />
        done
      </span>
    </div>
    <a
      className="gb-btn gb-btn-small gb-btn-primary gb-btn-white"
      href="/dashboard"
      onClick={[Function]}
    >
      See the projects
    </a>
  </div>
  <div
    className="review-box"
  >
    <h2
      className="review-box-title"
    >
      Last review
    </h2>
    <a
      className="profile-link"
      href="#"
    >
      <img
        alt="avatar"
        className="gb-avatar gb-avatar-medium"
        src="https://images.askmen.com/1080x540/2016/01/25-021526-facebook_profile_picture_affects_chances_of_getting_hired.jpg"
      />
    </a>
    <h3
      className="review-author-name"
    >
      John Doe
    </h3>
    <p
      className="review-author-quote"
    >
      “
      New battery for smartphones can be charged in a minute
      ”
    </p>
    <svg
      className="gb-icon-medium"
      height="100%"
      id="notification"
      viewBox="0 0 185 362"
      width="100%"
    >
      <title>
        arrow
      </title>
      <line
        stroke="grey"
        strokeWidth="10px"
        x1="0.346633"
        x2="184.347"
        y1="0.639659"
        y2="177.64"
      />
      <line
        stroke="grey"
        strokeWidth="10px"
        x1="184.353"
        x2="0.352587"
        y1="178.355"
        y2="361.355"
      />
    </svg>
  </div>
</div>
`;
